--- a/css/resources.css
+++ b/css/resources.css
@@ -46,12 +46,16 @@ section {
 }
 
 .section-lead {
-    margin: 10px 0;
-	text-indent: -25px;
+    margin: 20px 0;
 }
 
 .section-paragraph {
-    margin: 30px 0;
+    margin: 10px 0;
+	margin-left: 25px;
+}
+
+li {
+	margin-left: 50px;
 }
 
 footer {
